# fast-floats

./: .travis.yml  Cargo.toml  README-crates.io.md  README.rst
examples/: sums.rs
src/: lib.rs
